# simple-fnn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: doxygen.conf  mcss_doxygen.conf
doc/doc/html/: annotated.html  classNeuralNet_1_1Layer.html  classNeuralNet_1_1Network.html  files.html  index.html  modules.html  namespaceNeuralNet.html  namespaceNeuralNet_1_1internal.html  namespaces.html  pages.html  searchdata.js
doc/doc/xml/: classNeuralNet_1_1Layer.xml  classNeuralNet_1_1Network.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  internal_8cpp.xml  internal_8hpp.xml  layer_8cpp.xml  layer_8hpp.xml  main_8cpp.xml  namespaceNeuralNet.xml  namespaceNeuralNet_1_1internal.xml  network_8cpp.xml  network_8hpp.xml
include/: internal.hpp  layer.hpp  network.hpp
src/: internal.cpp  layer.cpp  main.cpp  network.cpp
tools/: build-release.sh  build.sh  gen_docs.sh  plot_cost.py  run-release.sh  run.sh
